@@ -458,7 +458,7 @@ checksum=dd7e5a6e30
 format=js
 minified=1
 [sass:sass/main.scss]
-checksum=5efdb8dfeb
+checksum=c38da32027
 format=css
 minified=0
 [sass-min:sass/main.scss]
